--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CR58D81ESD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CR58D81ESD');
+</script>
+
 </head>
 <body>
     <h1> Clique no botão pra ser redirecionado a outra página</h1>
